Linux aura: use all-scroll cursor in place of move

R=sadrul@chromium.org
BUG=671127

Review-Url: https://codereview.chromium.org/2558623003
Cr-Commit-Position: refs/heads/master@{#437155}

Former-commit-id: f8614e087b47efbc3f359234b461cd2d88833f8a